@@ -1,4 +1,6 @@
 version 0.99.2 (not yet released)
+           * Now can specify just lon_0 for all cylindrical projections
+             (to produce global map centered on lon_0).
            * Added save_background.py example, showing how to re-use
              a map background without redrawing coastlines.
            * Added embedding_map_in_wx.py example (courtesy of
